Updating the image to take advantage of MaxRAMPercentage.